--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,12 +1,21 @@
 html {
   box-sizing: border-box;
-  font-size: 18px;
-  line-height: 1.5;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 }
 
 *,*::before,*::after {
   box-sizing: inherit;
   margin: 0;
   padding: 0;
+}
+
+html {
+  font-size: 18px;
+  line-height: 1.5;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue',sans-serif;
+}
+
+@media (max-width: 500px) {
+  html {
+    font-size: 14px;
+  }
 }
